--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,3 +1,34 @@
 node_modules
 config
 node_module
+.gitignore
+.node_modules
+config
+.git
+
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+node_modules
+node_module
+
