having issues gitignoring the nodeu_modules from my server side

--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,7 +1,6 @@
-node_modules
+node_modules/
 config
-node_module
-.gitignore
+server/node_modules
 .node_modules
 config
 .git
@@ -10,6 +9,7 @@ config
 
 # dependencies
 /node_modules
+node_modules/
 /.pnp
 .pnp.js
 
